<resources>
    <string name="app_name">Ultimate Note App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note_image_description">NoteImage</string>
    <string name="filter">Filter</string>
    <string name="filters">FILTER</string>
    <string name="add_new_note">Add new note</string>
    <string name="save_note">Save note</string>
    <string name="filter_notes">Filter notes</string>
    <string name="image_note">Saved image of note</string>
    <string name="hint_title">Title</string>
    <string name="finish">Finish</string>
    <string name="hint_image_url">Optional Image URL</string>
    <string name="hint_description">Description</string>
    <string name="popup_title">ERROR SAVING CONTENT</string>
</resources>