<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clNoteDetailRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:padding="16dp">

        <View
            android:id="@+id/bgHolder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glColors"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <LinearLayout
            android:id="@+id/llColorsHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="12dp">

        </LinearLayout>

        <ImageView
            android:id="@+id/ivNoteImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_note"
            app:layout_constraintTop_toBottomOf="@+id/llColorsHolder">

        </ImageView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/input_background"
            app:boxBackgroundColor="@color/transparent"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintTop_toBottomOf="@+id/ivNoteImage">

            <EditText
                android:id="@+id/etvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:background="@color/transparent"
                android:hint="@string/hint_title"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilImageUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/input_background"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintTop_toBottomOf="@+id/tilTitle">

            <EditText
                android:id="@+id/etvImageUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:background="@color/transparent"
                android:hint="@string/hint_image_url"
                android:inputType="textUri"
                android:maxLines="2"
                android:textColor="@color/white"
                android:textSize="@dimen/etv_secondary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/input_background"
            android:elevation="8dp"
            app:boxBackgroundColor="@color/transparent"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintTop_toBottomOf="@+id/tilImageUrl">

            <EditText
                android:id="@+id/etvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:background="@color/transparent"
                android:hint="@string/hint_description"
                android:inputType="textMultiLine"
                android:maxLines="8"
                android:textColor="@color/white"
                android:textSize="@dimen/etv_secondary"
                android:imeOptions="actionDone"
                app:layout_constraintTop_toBottomOf="@+id/tilTitle">

            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fbaSaveNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:contentDescription="@string/save_note"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@android:drawable/ic_menu_save" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>